--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.0",
 		"@emotion/styled": "^11.10.0",
+		"mobx": "^6.6.1",
+		"mobx-react-lite": "^3.4.0",
 		"next": "12.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
